--- a/package.json
+++ b/package.json
@@ -8,5 +8,22 @@
   },
   "keywords": [],
   "author": "Kalan <kjj6198@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "babel": "~6.5.2",
+    "babel-core": "~6.17.0",
+    "babel-loader": "~6.2.5",
+    "css-loader": "~0.25.0",
+    "extract-text-webpack-plugin": "~1.0.1",
+    "react": "~15.3.2",
+    "style-loader": "~0.13.1",
+    "webpack": "~1.13.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "~7.0.0",
+    "eslint": "~3.7.0",
+    "eslint-config-airbnb": "~12.0.0",
+    "eslint-plugin-react": "~6.3.0",
+    "eslint-plugin-smells": "~1.0.1"
+  }
 }
