--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build"
   },
   "keywords": [],
   "author": "Kalan <kjj6198@gmail.com>",
@@ -13,9 +13,13 @@
     "babel": "~6.5.2",
     "babel-core": "~6.17.0",
     "babel-loader": "~6.2.5",
+    "babel-preset-es2015": "~6.16.0",
+    "babel-preset-react": "~6.16.0",
+    "babel-preset-stage-2": "~6.17.0",
     "css-loader": "~0.25.0",
     "extract-text-webpack-plugin": "~1.0.1",
     "react": "~15.3.2",
+    "react-dom": "~15.3.2",
     "style-loader": "~0.13.1",
     "webpack": "~1.13.2"
   },
@@ -24,6 +28,7 @@
     "eslint": "~3.7.0",
     "eslint-config-airbnb": "~12.0.0",
     "eslint-plugin-react": "~6.3.0",
-    "eslint-plugin-smells": "~1.0.1"
+    "eslint-plugin-smells": "~1.0.1",
+    "webpack-dev-server": "~1.16.1"
   }
 }
