--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-	"presets": ["es2015", "react", "stage-2"]
+  "presets": ["react", "es2015"],
+  "plugins": ["syntax-dynamic-import"],
+  "env": {
+    "development": {
+      "presets": ["react-hmre"]
+    }
+  }
 }
