--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,12 @@
 {
-  "files": ["src/**/*.js"],
-  "extends": "airbnb",
+  "plugins": ["smells", "react"],
+  "globals": {
+    "$": true,
+    "window": true,
+    "document": true,
+    "NODE": true
+  },
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
     "ecmaFeatures": {
@@ -19,16 +25,49 @@
       "defaultParams": true
     }
   },
-  "plugins": [
-      "react"
-  ],
+  "settings": {
+    "import/resolver": {
+      "webpack": {
+        "config": {
+          "resolve": {
+            "extensions": [".js", ".jsx", ".scss"],
+            "modules": ["node_modules", "./client/components", "./clients/constants", "./clients/styles"]
+          }
+        }
+
+      }
+    }
+  },
+  "extends": ["airbnb/legacy", "airbnb/base"],
   "rules": {
-    "react/prefer-stateless-function": 0,
+    "import/prefer-default-export": 0,
+    "import/no-unresolved": 0,
+    "import/no-extraneous-dependencies": 0,
+    "import/no-named-as-default-member": 0,
+    "no-unused-vars": ["error", { "args": "none" }],
+    "arrow-parens": 0,
+    "object-shorthand": 0,
+    "no-cond-assign": 0,
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
+    "prefer-template": 0,
+    "no-new": 0,
+    "no-underscore-dangle": 0,
+    "no-return-assign": 0,
+    "object-curly-spacing": 0,
+    "no-trailing-spaces": 0,
+    "eol-last": 0,
+    "global-require": 0,
+    "comma-dangle": 0,
+    "default-case": 0,
+    "semi": 0,
     "no-useless-constructor": 0,
-    "indent": 0,
+    "indent": [2, 2, {SwitchCase: 1}],
     "camelcase": 0,
-    "no-multi-spaces": 0
+    "no-multi-spaces": 0,
+    "func-name": 0,
+    "import/no-named-as-default": 0,
+    "class-methods-use-this": 0,
+    "arrow-body-style": 0
   }
 }
