--- a/package.json
+++ b/package.json
@@ -1,35 +1,53 @@
 {
-  "name": "react-two-way-slider",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build"
+    "webpack-dev-server": "nodemon --watch webpack.config.js --watch webpack.parts.js --exec \"webpack-dev-server --env.target development\"",
+    "lint:js": "eslint ./src"
   },
-  "keywords": [],
-  "author": "Kalan <kjj6198@gmail.com>",
-  "license": "ISC",
   "dependencies": {
-    "babel": "~6.5.2",
-    "babel-core": "~6.17.0",
-    "babel-loader": "~6.2.5",
-    "babel-preset-es2015": "~6.16.0",
-    "babel-preset-react": "~6.16.0",
-    "babel-preset-stage-2": "~6.17.0",
-    "css-loader": "~0.25.0",
-    "extract-text-webpack-plugin": "~1.0.1",
-    "react": "~15.3.2",
-    "react-dom": "~15.3.2",
-    "rx": "~4.1.0",
-    "style-loader": "~0.13.1",
-    "webpack": "~1.13.2"
+    "prop-types": "^15.5.10",
+    "ramda": "^0.24.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
-    "babel-eslint": "~7.0.0",
-    "eslint": "~3.7.0",
-    "eslint-config-airbnb": "~12.0.0",
-    "eslint-plugin-react": "~6.3.0",
-    "eslint-plugin-smells": "~1.0.1",
-    "webpack-dev-server": "~1.16.1"
+    "autoprefixer": "^7.1.1",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "chunk-manifest-webpack-plugin": "^1.1.0",
+    "css-loader": "^0.28.4",
+    "cssnano": "^3.10.0",
+    "eslint": "^4.0.0",
+    "eslint-config-airbnb": "lastest",
+    "eslint-import-resolver-node": "^0.3.1",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-import": "^2.6.1",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-smells": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "jest": "^20.0.4",
+    "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0",
+    "postcss-loader": "^2.0.6",
+    "redbox-react": "^1.4.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "stylelint": "^7.11.1",
+    "stylelint-config-standard": "^16.0.0",
+    "webpack": "^2.6.1",
+    "webpack-chunk-hash": "^0.4.0",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-merge": "^4.1.0"
   }
 }
